Fix header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -2906,7 +2906,7 @@ input.hs-button.primary.large{
   /*background: url(../img/plaza_espana.jpg) no-repeat top center;*/
   margin-bottom: 0;
   padding: 0;
-  height: 275px;
+  height: 90px;
   text-align: bottom;
 }
 
